--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
   },
   "dependencies": {
     "next": "10.0.0",
+    "postcss-flexbugs-fixes": "^5.0.0",
+    "postcss-import": "^13.0.0",
+    "postcss-preset-env": "^6.7.0",
+    "precss": "^4.0.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "sass": "^1.28.0",
